--- a/project/composer.json
+++ b/project/composer.json
@@ -1,5 +1,7 @@
 {
     "require": {
-        "twig/twig": "^3.5"
+        "twig/twig": "^3.5",
+        "phpmailer/phpmailer": "^6.7",
+        "vlucas/phpdotenv": "^5.5"
     }
 }
