--- a/project/composer.json
+++ b/project/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "twig/twig": "^3.5",
         "phpmailer/phpmailer": "^6.7",
-        "vlucas/phpdotenv": "^5.5"
+        "vlucas/phpdotenv": "^5.5",
+        "fpdf/fpdf": "^1.85"
     }
 }
